--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,12 @@
     width: 80%;
 }
 header {
-    background-color:#585858;
+    background-color:red;
     color: #efeeee;
     font-size: 72pt;
     font-family: "impact";
     padding-left: 5px;
+	text-align: center;
 }
 
 nav ul {
@@ -32,7 +33,7 @@ nav li a:hover {
     font-weight: bold;
 }
 footer {
-    background-color: #585858;
+    background-color:#0476f2;
     color: #efeeee;
     text-align: center;
     font-size: 18px;
@@ -59,7 +60,7 @@ aside {
 
 aside ul li a {
     list-style-type: none;
-	text-decoration: none;
+	text-decoration:none;
 	float: right;
 	color:#90A4AE;}
 
@@ -112,4 +113,8 @@ footer {
     width: 100%;
     border-bottom: 1px solid #585858;
 }
+}
+.stan {color:red
+}
+.dc {color:#0476f2;
 }
